@@ -1581,5 +1581,30 @@ The above example creates a new three columns list store. The types of the colum
         <since version="Gtk# 2.10" />
       </Docs>
     </Member>
+    <Member MemberName="InsertWithValues">
+      <MemberSignature Language="C#" Value="public Gtk.TreeIter InsertWithValues (int position, object[] values);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.TreeIter</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="position" Type="System.Int32" />
+        <Parameter Name="values" Type="System.Object[]">
+          <Attributes>
+            <Attribute>
+              <AttributeName>System.ParamArray</AttributeName>
+            </Attribute>
+          </Attributes>
+        </Parameter>
+      </Parameters>
+      <Docs>
+        <param name="position">Insert position.</param>
+        <param name="values">An array of column values to set.</param>
+        <summary>Inserts a row into the store at a given position with column values.</summary>
+        <returns>An iter pointing to the inserted row.</returns>
+        <remarks>The values provided should be in column order.</remarks>
+        <since version="Gtk# 2.8" />
+      </Docs>
+    </Member>
   </Members>
 </Type>
