@@ -1852,5 +1852,57 @@ store = new TreeStore (typeof (int), typeof (string));
         <since version="Gtk# 2.10" />
       </Docs>
     </Member>
+    <Member MemberName="InsertWithValues">
+      <MemberSignature Language="C#" Value="public Gtk.TreeIter InsertWithValues (Gtk.TreeIter parent, int position, object[] values);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.TreeIter</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="parent" Type="Gtk.TreeIter" />
+        <Parameter Name="position" Type="System.Int32" />
+        <Parameter Name="values" Type="System.Object[]">
+          <Attributes>
+            <Attribute>
+              <AttributeName>System.ParamArray</AttributeName>
+            </Attribute>
+          </Attributes>
+        </Parameter>
+      </Parameters>
+      <Docs>
+        <param name="parent">Iter of the node to insert into.</param>
+        <param name="position">Insert position.</param>
+        <param name="values">An array of column values.</param>
+        <summary>Inserts a child row into a node with values.</summary>
+        <returns>An iter pointing to the added row.</returns>
+        <remarks>The column values provided should be in column order.</remarks>
+        <since version="Gtk# 2.10" />
+      </Docs>
+    </Member>
+    <Member MemberName="InsertWithValues">
+      <MemberSignature Language="C#" Value="public Gtk.TreeIter InsertWithValues (int position, object[] values);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.TreeIter</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="position" Type="System.Int32" />
+        <Parameter Name="values" Type="System.Object[]">
+          <Attributes>
+            <Attribute>
+              <AttributeName>System.ParamArray</AttributeName>
+            </Attribute>
+          </Attributes>
+        </Parameter>
+      </Parameters>
+      <Docs>
+        <param name="position">Insert position.</param>
+        <param name="values">An array of column values.</param>
+        <summary>Inserts a row into the Root node of the store with values.</summary>
+        <returns>An iter pointing to the added row.</returns>
+        <remarks>The column values provided should be in column order.</remarks>
+        <since version="Gtk# 2.10" />
+      </Docs>
+    </Member>
   </Members>
 </Type>
