@@ -117,6 +117,32 @@
 			return AppendValues ((Array) values);
 		}
 
+		[DllImport("libgtk-win32-2.0-0.dll")]
+		static extern void gtk_list_store_insert_with_valuesv(IntPtr raw, out TreeIter iter, int position, int[] columns, GLib.Value[] values, int n_values);
+
+		public TreeIter InsertWithValues (int position, params object[] values)
+		{
+			int[] columns = new int[values.Length];
+			GLib.Value[] vals = new GLib.Value[values.Length];
+			int n_values = 0;
+
+			for (int i = 0; i < values.Length; i++) {
+				if (values[i] != null) {
+					columns[n_values] = i;
+					vals[n_values] = new GLib.Value (values[i]);
+					n_values++;
+				}
+			}
+
+			TreeIter iter;
+			gtk_list_store_insert_with_valuesv (Handle, out iter, position, columns, vals, n_values);
+
+			for (int i = 0; i < n_values; i++)
+				vals[i].Dispose ();
+
+			return iter;
+		}
+
 		public ListStore (params GLib.GType[] types) : base (IntPtr.Zero)
 		{
 			CreateNativeObject (new string [0], new GLib.Value [0]);
