@@ -1,3 +1,10 @@
+2007-11-16  Eskil Bylund  <eskil@letterboxes.org>
+
+	* gtk/ListStore.custom:
+	* gtk/TreeStore.custom: Implement InsertWithValues.
+	* gtk/Gtk.metadata: Deprecate the old generated method.
+	[Fixes #325040]
+
 2007-11-12  Mike Kestner  <mkestner@novell.com>
 
 	* sample/TreeModelDemo.cs: lt/gt typo bugfix [Fixes #333653]
